--- a/app/views/pages/developers.html.erb
+++ b/app/views/pages/developers.html.erb
@@ -2,7 +2,7 @@
 <p>Shorten a new url</p>
 <pre class="prettyprint
      linenums">
-POST http://localhost:3000/api/urls.json
+POST http://yausdemo.herokuapp.com/api/urls.json
 </pre>
 <p>Example</p>
 <pre class="prettyprint
@@ -14,7 +14,7 @@ require 'oauth'
 consumer_key = "your key"
 consumer_secret = "your secret"
 consumer = OAuth::Consumer.new(consumer_key, consumer_secret,
-                              :site => "http://localhost:3000",
+                              :site => "http://yausdemo.herokuapp.com",
                               :request_token_path => "/oauth/request_token",
                               :authorize_path => "/oauth/authorize",
                               :access_token_path => "/oauth/access_token",
