--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,10 +54,10 @@
 	</header>
 	
 	<% unless notice.nil? %>
-	<p class="notice yaus-center"><%= notice %></p>
+	<div class="notice yaus-center"><%= notice %></div>
 	<% end %>
 	<% unless alert.nil? %>
-  <p class="alert yaus-center"><%= alert %></p>
+  <div class="yaus-center alert"><%= alert %></div>
   <% end %>
 	<div class="container-fluid">
 		<div class="row-fluid">
