--- a/app/views/pages/developers.html.erb
+++ b/app/views/pages/developers.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Create applications", oauth_clients_path, :class => "btn btn-success btn-large"%>
+<hr>
 <h2>API</h2>
 <p>Shorten a new url</p>
 <pre class="prettyprint
